--- a/index.html
+++ b/index.html
@@ -14,7 +14,47 @@
 
 <body>
 
-    
+
+        <!-- first half -->
+        <div>
+            <div class="flex flex-row">
+                <!-- left -->
+                <div class="flex flex-col">
+
+                    <p>SOLUTION</p>
+                    <p>Digital solutions for business.</p>
+                    <p>Do you have more questions about our solution? Just send us a message for help</p>
+                    <p>More About solution > </p>
+                    <p>100+ trusted Partners</p>
+
+                </div>
+
+                <!-- right -->
+                <div class="flex flex-col">
+
+                    <div>Slider</div>
+                    <div>Google Facebook Insta Fundbox</div>
+
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <!-- second half -->
+        <div class="justify-center bg-black p-4 ml-6 mr-6 my-10" style="border-radius: 2rem; height: 15rem;">
+            <div class="flex justify-between">
+                <!-- left -->
+                <div class="flex flex-col">
+                    <div class="">Have any Project?</div>
+                    <div class="">Don't hesitate to send us message.</div>
+                </div>
+
+                <!-- right -->
+                <button class="">Get Started today!</button>
+            </div>
+        </div>
 
 </body>
 
